added atitle and Description

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body>
-    <h1>Hello World! we are software developers</h1>
+    <h1 id="title">Microverse Survey</h1>
+    <p id="description">
+      We are doing Microverse survey here. We have already completed the genral Instruction.
+    </p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
