--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,6 +11,18 @@
     <p id="description">
       We are doing Microverse survey here. We have already completed the genral Instruction.
     </p>
+      <form id="survey-form">
+        <input type="text" placeholder="Enter your name" required>
+
+      </form>
+
+
+
+
+
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
