--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -13,6 +13,7 @@
     </p>
       <form id="survey-form">
         <input type="text" placeholder="Enter your name" required>
+        <input type="email" placeholder="Enter your email"required>
 
       </form>
 
