--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,17 +7,22 @@
   </head>
 
   <body>
+    <main id="main">
     <h1 id="title">Microverse Survey</h1>
     <p id="description">
       We are doing Microverse survey here. We have already completed the genral Instruction.
     </p>
       <form id="survey-form">
-        <input type="text" placeholder="Enter your name" required>
-        <input type="email" placeholder="Enter your email"required>
+        <label for="name">Full Name</label>
+        <input type="text" id="name" placeholder="Enter your name" required>
+        <label for="email">your email</label>
+        <input type="email" id="email" placeholder="Enter your email" required>
+         <label for="age">Age</label>
+         <input type="number" id="number" placeholder="your age" min="20" max="99" required>
 
       </form>
 
-
+    </main>
 
 
 
