--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -13,14 +13,28 @@
       We are doing Microverse survey here. We have already completed the genral Instruction.
     </p>
       <form id="survey-form">
-        <label for="name">Full Name</label>
+        <label id="name-label" for="name">Full Name</label>
         <input type="text" id="name" placeholder="Enter your name" required>
-        <label for="email">your email</label>
+        <label id="email-label" for="email">your email</label>
         <input type="email" id="email" placeholder="Enter your email" required>
-         <label for="age">Age</label>
+         <label id="number-label" for="age">Age</label>
          <input type="number" id="number" placeholder="your age" min="20" max="99" required>
+         <select>
+          <div class="form-group">
+            <select id="dropdown" name="role" class="form-control" required>
+              <option disabled selected value>Select current role</option>
+              <option value="student">Student</option>
+              <option value="job">Full Time Job</option>
+              <option value="learner">Full Time Learner</option>
+              <option value="preferNo">Prefer not to say</option>
+              <option value="other">Other</option>
+            </select>
+      </div>
+      
+         </select>
 
       </form>
+      
 
     </main>
 
