added text and submit

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -59,7 +59,12 @@
         <input type="checkbox" value="yes">
         <label for="no">No</label>
         <input type="checkbox" value="no">
-    
+        <br>
+        <textarea name="comment" form="usrform">comment here..
+
+        </textarea>
+        <br>
+        <input id="submit" type="submit">
       </form>
       
 
