add the style sheet

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -23,7 +23,7 @@
          
           <div class="form-group">
             <select id="dropdown" name="role" class="form-control" required>
-              <option disabled selected value>Select current role</option>
+              <option id="drpdn" disabled selected value>Select current role</option>
               <option value="student">Student</option>
               <option value="job">Full Time Job</option>
               <option value="learner">Full Time Learner</option>
